Release 0.96.li6 (LinkedIn release) on 09/19/2012

Changes made since 0.96.li5
* Changed getall return behavior to comply with javadoc

Release 0.96.li5 (LinkedIn release) on 09/06/2012

Changes made since 0.96.li2
* Added server config to control socket backlog
* Added "--query-keys" option to query multiple keys of multiple stores from specific node
* Added control to DataCleanupJob Frequency
* Improved messages in request tracing
* Cleaned up help/usage messages within the client shell
* Unified jmxid as the factory across the board
* Fixed a bug that caused unnecessary serial requests in getall
* Fixed a bug that prevented "--fetch-keys" and "--fetch-entries" in admin tool from showing multiple store results
* Fixed problem in sample config that prevented the server from starting
* Fixed random rebalance test failures

Release 0.96.li2 (LinkedIn release) on 08/01/2012

Changes made since 0.96.li1
* HFTP performance issue bug fix (fix in byte buffer and copy process)
* Added mechanism to isolate BDB cache usage among stores
* Enhanced debug logging (for traffic analysis).
* Python client bug fixes (from pull request)
* Tooling improvement (generate_cluster_xml.py)

Release 0.96.li1 (LinkedIn release) on 07/12/2012

Changes made since 0.95.li9
* Reuploaded the jar

Changes made since 0.95.li4
* Added configurable option to interrupt service being unscheduled
* Added rollback capability to the Admin tool
* Added tracking functionality for scan permit owner
* Added zoned option for restore from replicas
* Enabled NIO connector by default
* Added client side MBeans for multiple socket pool metrics
* Shortened some long tests and created new target called "junit-long" that
* includes them
* Finer timeouts and partial getalls
* Refactored to share VodemortOpCode between classes
* Fixed a donor-based rebalancing bug and added a unit test
* Fixed a bug that will return null during concurrent read and writes